Se agregaron categorias a la api
