# src/models/category.model.js
@@ -1,0 +1,6 @@
+const mongoose = require("mongoose");
+const categorySchema = require("../repositories/category.schema");
+
+const Category = mongoose.model("Category", categorySchema);
+
+module.exports = Category;
